--- a/styles/header.css
+++ b/styles/header.css
@@ -1,9 +1,13 @@
 .header {
-  position: relative;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
   padding: 10px 20px;
   height: 75px;
   width: 100%;
   margin: 0;
+  z-index: 1;
   background-color: rgb(22, 27, 34);
   color: #fff;
   text-transform: capitalize;
